--- a/index.html
+++ b/index.html
@@ -9578,7 +9578,8 @@
 				</ellipse>
 			</svg>
 			<div id="n_Scallop_Dumplings">
-				<span>海皇帶子餃</span><br /><span style="font-size:12px;letter-spacing:0.5px;">Scallop Dumplings</span>
+				<span>煙燻鮭魚餃</span><br /><span style="font-size:12px;letter-spacing:0.5px;">Smoked Salmon<br />
+					Dumplings</span>
 			</div>
 		</div>
 		<div id="Group_gc">
