--- a/index.html
+++ b/index.html
@@ -10088,7 +10088,7 @@
 				</path>
 			</svg>
 			<div id="n_blueberry_Panna_Cotta">
-				<span>藍莓鮮奶酪</span><br /><span style="font-size:12px;letter-spacing:0.5px;">blueberry
+				<span>藍莓奶酪</span><br /><span style="font-size:12px;letter-spacing:0.5px;">blueberry
 					Panna<br />Cotta</span>
 			</div>
 			<svg class="Path_2" viewBox="0 0 7 7">
@@ -10097,7 +10097,7 @@
 				</path>
 			</svg>
 			<div id="n_Strawberry_Panna_Cotta">
-				<span>草莓鮮奶酪</span><br /><span style="font-size:12px;letter-spacing:0.5px;">Strawberry
+				<span>草莓奶酪</span><br /><span style="font-size:12px;letter-spacing:0.5px;">Strawberry
 					Panna<br />Cotta</span>
 			</div>
 		</div>
